<resources>
    <string name="drawer_open">Open Main Menu</string>
    <string name="drawer_close">Close ain Menu</string>
    <string name="whats_new_title">Check out what has changed</string>
    <string name="whats_new">Release notes</string>
    <string name="text_was_copied_to_clipboard">Text copied to clipboard.</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="image_could_not_be_read">The image was not found in the data sent.</string>
    <string name="image_does_not_exist">The image was not found on your phone.</string>
    <string name="camera_app_not_found">Camera app not found.</string>
    <string name="gallery_io_error">Image could not be loaded.</string>
    <string name="media_store_returned_null">Gallery returned no image to me.</string>
    <string name="camera_app_error">Camera app error.</string>
    <string name="camera_no_image_returned">Camera app returned no image.</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_image">Loading image..</string>
    <string name="please_tap_on_column">Please tap on a text column first</string>
    <string name="get_more_languages">Get more languages</string>
    <string name="aborts_scan">Aborts current scan!</string>
    <string name="send_mail">Drop me a line.</string>
    <string name="hocr2pdf_title">
        <a href="http://www.exactcode.com/site/open_source/exactimage/hocr2pdf/">hocr2pdf</a>
        from exactCODE
    </string>
    <string name="hocr2pdf_summary">hocr2pdf is a command line front-end for the image processing
        library to create perfectly layouted, searchable PDF files from hOCR, annotated HTML, input
        obtained from an OCR system.
    </string>
    <string name="leptonica_title">
        <a href="http://www.leptonica.com/">leptonica</a>
    </string>
    <string name="leptonica_summary">Leptonica is a pedagogically-oriented open source site
        containing software that is broadly useful for image processing and image analysis
        applications.
    </string>
    <string name="tesseract_ocr_title">
        <a href="https://github.com/tesseract-ocr/tesseract">tesseract-ocr</a>
    </string>
    <string name="tesseract_ocr_summary">Tesseract is probably the most accurate open source OCR
        engine available.
    </string>
    <string name="contact_welcome_text">Hi, my name is Renard. I have created the Text Fairy in my
        free time. I hope she is useful for you.
    </string>
    <string name="download_failed">Downloading of %1$s failed!</string>
    <string name="language_downloaded">%1$s language data downloaded</string>
    <string name="app_name">Text Fairy</string>
    <string name="tips">Tips</string>
    <string name="ocr_language_delete">Delete</string>
    <string name="download_title">Language data for %s</string>
    <string name="ocr_language_title">Manage Languages</string>
    <string name="pref_summary_rate">Rate the text fairy</string>
    <string name="pref_summary_license">Learn about the software that was used to create the Text
        Fairy.
    </string>
    <string name="pref_summary_contact">Learn about the creator and supply feedback.</string>
    <string name="pref_summary_default_ocr_lang">Download and manage languages for text
        recognition.
    </string>
    <string name="pref_summary_data_directory">Specify the directory where the text fairy should
        look for language files. Only change this if you know what you are doing.
    </string>
    <string name="pref_title_data_directory">Tessdata directory</string>
    <string name="pref_title_rate">Rate</string>
    <string name="pref_title_default_ocr_lang">Document language</string>
    <string name="pref_title_help">Show tips</string>
    <string name="pref_title_contact">Contact information</string>
    <string name="pref_title_license">Licence info</string>
    <string name="pref_summary_help">Tips for improving the optical character recognition (OCR)
    </string>
    <string name="error_create_file">I\'m sorry but was not able to store your photo on the SD
        card.
    </string>
    <string name="share_subject">scanned text</string>
    <string name="save_success">Save successful</string>
    <string name="save_fail">Save failed!</string>
    <string name="share_chooser_title">Select how you want to share the text</string>
    <string name="progress_start">Starting</string>
    <string name="download_language">Download</string>
    <string name="empty_grid_download_language">Download your language.</string>
    <string name="progress_dewarp">Straightening text</string>
    <string name="progress_ocr">Reading text</string>
    <string name="delete">Delete</string>
    <string name="edit_title">Change title</string>
    <string name="cancel">Cancel</string>
    <string name="edit_dialog_title">Enter a title for your document</string>
    <string name="delete_error">Sorry, I could not delete this document</string>
    <string name="error_could_not_take_photo">Sorry, I could not read the photo</string>
    <string name="empty"/>
    <string name="cropping_image">Cropping image</string>
    <string name="error_title">Error</string>
    <string name="error_load_file">I\'m sorry but I was not able to find the file. Maybe it was
        deleted?
    </string>
    <string name="pdf_creation_message">Creating your PDF!</string>
    <string name="option_view_mode">Switch</string>
    <string name="document_layout_dialog">How many columns?</string>
    <string name="layout_complex">More than one column.</string>
    <string name="layout_simple">One column.</string>
    <string name="saving_document">Saving Document</string>
    <string name="button_column_pick_completed">start text recognition</string>
    <string name="export_as_pdf">Create PDF</string>
    <string name="delete_language_title">Delete %1$s?</string>
    <string name="delete_language_message">You\'ll free up %1$d kb.</string>
    <string name="delete_dialog_message">Deleting Documents..</string>
    <string name="progress_pfd_creation">Creating page %1$d/%2$d for %3$s.</string>
    <string name="option_text">Text settings</string>
    <string name="option_content">Table of contents</string>
    <string name="option_line_spacing">Line spacing</string>
    <string name="option_text_alignment">Text alignment</string>
    <string name="options_preview_text">This is a preview of your current text settings. Press the
        back key to continue reading.\nLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
        diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
        voluptua.
    </string>
    <string name="progress_analyse_layout">I\'m analysing the layout. Please wait some seconds.
    </string>
    <string name="progress_image_detection">Searching for text</string>
    <string name="progress_assemble_pix">I\'m assembling the final picture now.</string>
    <string name="progress_choose_columns">Please choose the text and images you want in the final
        document
    </string>
    <string name="new_photo">New photo</string>
    <string name="no_sd_card">No SD card mounted. Is the phone connected to your pc? If so please
        remove it and try again.
    </string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_left">Rotate left</string>
    <string name="content_description_fairy">The helpful text fairy</string>
    <string name="crop_title">Choose image section</string>
    <string name="text_options_title">Change your text settings</string>
    <string name="app_options_title">Change your settings</string>
    <string name="edit_title_hint">Enter a title</string>
    <string name="option_gallery_title">Pick an image from the gallery</string>
    <string name="option_camera_title">Make a new photo</string>
    <string name="option_preference_title">Settings</string>
    <string name="show_tips">Show tips</string>
    <string name="document_help_title">You can manage your document here.</string>
    <string name="fairy_welcome_bubble">I\'m the Text Fairy</string>
    <string name="new_photo_gallery">Pick gallery photo</string>
    <string name="show_documents">Manage documents</string>
    <string name="join">Join</string>
    <string name="join_documents_title">Joining Documents</string>
    <string name="join_documents_result">%1$d documents joined</string>
    <string name="start_app">Let\'s go</string>
    <string name="install_error_disk_space">Not enough disk space. You need to free %1$d MB on your
        SD card
    </string>
    <string name="install_error">Could not install configuration files.</string>
    <string name="toc_title">Table of contents</string>
    <string name="start_text_1">What i can do!…</string>
    <string name="start_text_2">I extract editable text from pictures. Tap on me to learn more…
    </string>
    <string name="start_text_3">Take a new picture or chose one from your gallery…</string>
    <string name="no_ocr">No processing. Save image unchanged.</string>
    <string name="text_to_speech">Speak text</string>
    <string name="share_text">Share</string>
    <string name="help_to_improve">Feedback</string>
    <string name="contribute_text">Creating an OCR app is a lot of work. But you can help me to
        improve the app.
    </string>
    <string name="rating_title">Rate the app</string>
    <string name="rating_text">The app is useful to you? Review it on the Play Store.</string>
    <string name="feedback_title">Send feedback</string>
    <string name="feedback_text_1">The app is not working as expected?</string>
    <string name="feedback_text_2">You have a feature suggestion?</string>
    <string name="feedback_text_3">You found a nasty bug?</string>
    <string name="beta_test_title">Become a beta tester</string>
    <string name="beta_test_text_1">Try new features as soon as possible?</string>
    <string name="beta_test_text_2">Influence development of new features?</string>
    <string name="enroll_as_beta_tester">Enroll in beta test program.</string>
    <string name="about">About</string>
    <string name="explanation_crop_video">(Video) How to fix the viewpoint</string>
    <string name="ocr_tip_1">Good lightning is most important. Use the flashlight if possible.
    </string>
    <string name="ocr_tip_2">Blurry text is hard to read for me. Make sure that the camera has
        properly focused the text.
    </string>
    <string name="ocr_tip_3">Experiment with different iso values. High iso values can lead to image
        noise that makes it harder to recognize the letters
    </string>
    <string name="ocr_tip_4">Most of the time 5 to 7 megapixels is enough resolution to get good
        results. Higher values will often only increase the processing time.
    </string>
    <string name="ocr_tip_heading">How to improve text recognition</string>
    <string name="additional_tips">Additional tips</string>
    <string name="ocr_tip_5">You can speed up the text recognition by cropping the taken photo.
    </string>
    <string name="ocr_tip_6">I\'m best at recognizing text from books, magazines or new papers.
        Ornate or colorful letters are problematic for me.
    </string>
    <string name="ocr_tip_7">I\'m having equally difficulties when reading light text from dark
        backgrounds.
    </string>
    <string name="image_is_blurred">I have a problem.</string>
    <string name="keep_camera_steady">Keep the camera steady.</string>
    <string name="image_not_too_dark">Make sure the image is not too dark.</string>
    <string name="nav_drawer_download_language">Add language</string>
    <string name="first_scan_successful">Congratulations, you are getting good at it!</string>
    <string name="love_it">Love it!</string>
    <string name="could_be_better">Could be better</string>
    <string name="feedback_description">How was your experience using this app?</string>
</resources>