<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/explanation_text"
            android:text="@string/explanation_crop_video"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <fragment

            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
            android:id="@+id/youtube_fragment"
            android:layout_width="240dp"
            android:layout_height="320dp"
            android:layout_below="@+id/explanation_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_below="@id/youtube_fragment"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:text="@string/ocr_tip_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/ocr_tip_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ocr_tip_style_check" />

            <TextView
                style="@style/ocr_tip_style_check"
                android:text="@string/ocr_tip_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ocr_tip_style_check"
                android:text="@string/ocr_tip_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ocr_tip_style_check"
                android:text="@string/ocr_tip_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textAppearance="@android:style/TextAppearance.Large"
                android:text="@string/additional_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ocr_tip_style_check"
                android:text="@string/ocr_tip_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ocr_tip_style_cross"
                android:text="@string/ocr_tip_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ocr_tip_style_cross"
                android:text="@string/ocr_tip_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>

