<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/item_edit_title"
        android:title="@string/edit_title"
        android:icon="@drawable/ic_action_edit"
        yourapp:showAsAction="always">
    </item>
    <item
        android:id="@+id/item_join"
        android:title="@string/join"
        android:icon="@drawable/ic_action_merge"
        yourapp:showAsAction="always">
    </item>
    <item
        android:id="@+id/item_export_as_pdf"
        android:title="@string/export_as_pdf"
        android:icon="@drawable/ic_action_pdf"
        yourapp:showAsAction="always">
    </item>
    <item
        android:id="@+id/item_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_delete"
        yourapp:showAsAction="always">
    </item>
</menu>