<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:clickable="true"
        android:padding="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding_half"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
    <TextView
            android:layout_width="wrap_content"
            android:drawablePadding="@dimen/default_padding"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:gravity="left|center_vertical"
            android:drawableLeft="@drawable/ic_alert_warning"
            android:text="@string/image_is_blurred"
            android:id="@+id/blur_warning_title"
            android:textColor="@color/primary"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_camera_steady"
            style="@style/blur_warning_bullet_point"/>

    <TextView
            android:text="@string/image_not_too_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/blur_warning_bullet_point"/>


</LinearLayout>